# simplecalc

./: .gitignore  CMakeLists.txt  README.md
include/: Calculator.h  calc.h
src/: Calculator.cpp  calc.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  testcalc.cpp
